--- a/SVC_Machine_Learning.ipynb
+++ b/SVC_Machine_Learning.ipynb
@@ -105,6 +105,100 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class LinearSVC_SGD:\n",
+        "    def __init__(self, C=1.0, lr=0.01, epochs=50):\n",
+        "        self.C = C\n",
+        "        self.lr = lr\n",
+        "        self.epochs = epochs\n",
+        "\n",
+        "    def fit(self, X, y):\n",
+        "        # y must be {-1, +1}\n",
+        "        y = y.astype(float)\n",
+        "        y[y == 0] = -1\n",
+        "\n",
+        "        n_samples, n_features = X.shape\n",
+        "        self.w = np.zeros(n_features)\n",
+        "        self.b = 0.0\n",
+        "\n",
+        "        t = 1\n",
+        "        for epoch in range(self.epochs):\n",
+        "            idx = np.random.permutation(n_samples)\n",
+        "            X_shuf = X[idx]\n",
+        "            y_shuf = y[idx]\n",
+        "\n",
+        "            for i in range(n_samples):\n",
+        "                x_i = X_shuf[i]\n",
+        "                y_i = y_shuf[i]\n",
+        "\n",
+        "                eta = self.lr / t\n",
+        "                score = y_i * (np.dot(self.w, x_i) + self.b)\n",
+        "\n",
+        "                if score >= 1:\n",
+        "                    self.w = self.w - eta * self.w\n",
+        "\n",
+        "                else:\n",
+        "                    self.w = self.w - eta * (self.w - self.C * y_i * x_i)\n",
+        "                    self.b = self.b + eta * self.C * y_i\n",
+        "\n",
+        "                t += 1\n",
+        "\n",
+        "    def predict(self, X):\n",
+        "        return np.sign(X.dot(self.w) + self.b)\n",
+        "\n",
+        "    def decision_function(self, X):\n",
+        "        return X.dot(self.w) + self.b\n",
+        "\n",
+        "def main():\n",
+        "    X = np.array([\n",
+        "        [2, 3],\n",
+        "        [3, 4],\n",
+        "        [3, 3],\n",
+        "        [-1, -2],\n",
+        "        [-2, -3],\n",
+        "        [-2, -2]\n",
+        "    ])\n",
+        "\n",
+        "    y = np.array([1, 1, 1, -1, -1, -1])   # dataset rõ ràng\n",
+        "\n",
+        "    model = LinearSVC_SGD(C=1.0, lr=0.1, epochs=40)\n",
+        "    model.fit(X, y)\n",
+        "\n",
+        "    print(\"w =\", model.w)\n",
+        "    print(\"b =\", model.b)\n",
+        "\n",
+        "    Y = np.array([ [5, 5], [-5, -5] ])\n",
+        "    pred = model.predict(Y)\n",
+        "    print(\"Predictions:\", pred)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1f9JHcKrWKGA",
+        "outputId": "33afd96d-ab86-48d3-9f3b-47c4fb388508"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "w = [0.18555672 0.31101984]\n",
+            "b = -0.1821985898440735\n",
+            "Predictions: [ 1. -1.]\n"
+          ]
+        }
+      ]
     }
   ]
 }
